# flutter-analyzer-ai

./: .gitignore  CHANGELOG.md  PLAN.md  flutter_analysis_pipeline.pptx  import_data.py  main.py  make_slide.js  monitor.sh  package-lock.json  package.json  plugins.db-shm  providers.json  pyproject.toml  start_analyzer.sh
.opencode/agents/: flutter-analyzer.md
.opencode/skills/cloud-service-check/: SKILL.md
.opencode/skills/code-stats-check/: SKILL.md
.opencode/skills/dependency-analysis/: SKILL.md
.opencode/skills/ecosystem-check/: SKILL.md
.opencode/skills/features-check/: SKILL.md
.opencode/skills/license-check/: SKILL.md
.opencode/skills/mobile-platform-check/: SKILL.md
.opencode/skills/payment-check/: SKILL.md
.opencode_server/cache/.bun/install/cache/: 21f19740189d11fe.npm  32a94fa33cc6c369.npm  4673952d56027d03.npm  477361ffdfe2653d.npm  544aad29bf256d77.npm  565c7fd5a0889e82.npm  591d5a6ce924044a.npm  59a99737c849cca3.npm  7fd430bb39ebc5ee.npm  871da3362992c584.npm  8be784fbee26056f.npm  a7e4de6abd2c06ea.npm  bbbaa22787d77a09.npm  c17f4447ebe3362d.npm  ec1978c43b0e97e6.npm
.opencode_server/cache/.bun/install/cache/arctic/: 2.3.4@@@1
.opencode_server/config/opencode/: opencode.json
.opencode_server/share/opencode/: bin  opencode.db  opencode.db-shm  opencode.db-wal
output/: alipay_kit.json  flutter_a11y_service.json  raw_output.txt  wakelock_plus.json
src/: analyzer.py  proxy.py  pub_downloader.py
web/: app.py  db.py  pubdev.py  queue.py
web/static/: app.js  style.css
web/templates/: base.html  import.html  index.html  plugin.html
(+17 files in other folders)
